fix: previous fix for the font was no good. currently trying to make it smaller to change the spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -335,7 +335,7 @@ footer {
     .container {
         display: flex;
         flex-direction: column;
-        text-align: center;
+        font-size: 18px;
         
     }
 }
